# llm4eln-assessment

./: .env.example  README.md  main.py  pyproject.toml  tutorial.py
proof/: Joerg Schaarschmidt_None_proof_61725a3071e0aaf09ed3e887506f8e5a7a2463f04c4c623a7a9814b7c8962ea3.txt  Matthias Albert Popp_azure_proof_af50587ca23c45aec06bc2e895c77a50d3ca84294566e53e090c1840d62419ce.txt  SimonStier_ollama_proof_0ee9b7a9fd7a6ddf052b0a6be9af59e9afc5bc51f966a016f0e56d3684d23cec.txt  Steffen Brinckmann_chatai_proof_a90f005e20a801a6177f00746eb691ec19001b69b8981119ad048a18533ecdfe.txt  Steffen Brinckmann_gemini_proof_a90f005e20a801a6177f00746eb691ec19001b69b8981119ad048a18533ecdfe.txt  Steffen Brinckmann_openai_proof_a90f005e20a801a6177f00746eb691ec19001b69b8981119ad048a18533ecdfe.txt
